<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>The pure_pursuit package</description>

  <maintainer email="rottertarmenation.y11.r18@gmail.com">RyuYamamoto</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
